@@ -2,7 +2,6 @@ package transactions.parser.json;
 
 import java.util.List;
 import java.util.function.Function;
-import java.util.stream.Collectors;
 
 import com.alibaba.fastjson2.JSONArray;
 import com.alibaba.fastjson2.JSONObject;
@@ -10,6 +9,8 @@ import transactions.model.request.Transaction;
 import transactions.model.request.Transactions;
 
 public class TransactionsRequestParser {
+
+    private TransactionsRequestParser() {}
     public static Transactions parseRequest(String jsonRequest) {
         JSONArray jsonArray = JSONArray.parseArray(jsonRequest);
 
@@ -19,7 +20,7 @@ public class TransactionsRequestParser {
     }
 
     private static List<Transaction> parseJsonArrayToTransactions(JSONArray jsonArray) {
-        return jsonArray.stream().map(parseJsonObjectToTransaction).collect(Collectors.toList());
+        return jsonArray.stream().map(parseJsonObjectToTransaction).toList();
     }
 
     private static final Function<Object, Transaction> parseJsonObjectToTransaction = obj -> {
